added transitions and motion to home page

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -14,6 +14,11 @@ import Footer from "../components/layout/Footer.astro";
     <slot name="head" />
   </head>
 
+  <script type="module">
+    import { initReveal } from '/src/scripts/reveal.ts';
+    initReveal();
+  </script>
+
   <body>
     <Header />
 
