--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,7 @@
 import "../styles/main.scss";
 import Header from "../components/layout/Header.astro";
 import Footer from "../components/layout/Footer.astro";
+import { initReveal } from '../scripts/reveal';
 ---
 
 <!DOCTYPE html>
@@ -15,7 +16,7 @@ import Footer from "../components/layout/Footer.astro";
   </head>
 
   <script type="module">
-    import { initReveal } from '/src/scripts/reveal.ts';
+    import {initReveal} from '/src/scripts/reveal'
     initReveal();
   </script>
 
