next try to fix the motions

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,10 +15,8 @@ import { initReveal } from '../scripts/reveal';
     <slot name="head" />
   </head>
 
-  <script type="module">
-    import {initReveal} from '/src/scripts/reveal'
-    initReveal();
-  </script>
+  <script src='../scripts/reveal.ts'></script>
+
 
   <body>
     <Header />
