--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -151,7 +151,7 @@
     }
   
     .mobile-menu__inner {
-      height: 100%;
+      height: 100vh;
       display: flex;
       flex-direction: column;
     }
